--- a/css/slidefolio.css
+++ b/css/slidefolio.css
@@ -209,6 +209,7 @@ border-radius:0px !important;
   width: 100%;
   position: relative;
 }
+
 .btn-top {
 color:#f1f1f1;
 background:none repeat scroll 0 0 rgba(0, 0, 0, 0.57);
@@ -218,6 +219,39 @@ border-color:#cccccc;
 .btn-top:focus,
 .btn-top:active,
 .btn-top.active {
+  color: #333333;
+  background-color: #ebebeb;
+  border-color: #adadad;
+}
+
+.btn-success {
+  color: #f1f1f1;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.57);
+  border-color: #cccccc;
+  width: 45%;
+  font-size: 1.5rem;
+}
+
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active {
+  color: #333333;
+  background-color: #ebebeb;
+  border-color: #adadad;
+}
+
+.btn-primary {
+  color: #f1f1f1;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.57);
+  border-color: #cccccc;
+  width: 45%;
+  margin-left: 8%;
+  font-size: 1.5rem;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
   color: #333333;
   background-color: #ebebeb;
   border-color: #adadad;
@@ -534,5 +568,17 @@ footer {
 
   .label {
     padding: .2em .3em .3em;
+  }
+}
+
+@media (max-width: 425px) {
+  .btn-primary {
+    width: 100%;
+    margin-top: 3%;
+    margin-left: 0;
+  }
+
+  .btn-success {
+    width: 100%;
   }
 }
